<resources>
    <string name="app_name">eBar</string>
    <string name="title_activity_home">eBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">  Email</string>
    <string name="password">  Parolă</string>
    <string name="password_new">  Parolă nouă</string>
    <string name="confirmPassword">  Confirmă parola</string>
    <string name="confirmNewPassword">  Confirmă noua parolă</string>
    <string name="passwordsDoNotMatch">  Parolele introduse nu coincid.</string>
    <string name="reset_code">  Cod resetare parolă</string>
    <string name="btn_login">Înregistrează-mă</string>
    <string name="btn_create_account">Creează cont</string>
    <string name="forgot_password">Ai uitat parola?</string>
    <string name="name">  Nume</string>
    <string name="username">  Nume de utilizator</string>
    <string name="btn_register_account">Înregistrare</string>
    <string name="title_activity_main">eBar</string>
    <string name="username_or_email">  Nume de utilizator sau email</string>
    <string name="send_code">Trimite-mi codul</string>
    <string name="already_have_code">Am codul deja</string>
    <string name="btn_reset_password">Resetează parola</string>
    <string name="send_reset_code_on_email">Cererea dumneavoastra a fost înregistrata cu succes. În câteva momente veti primi codul de resetarea parolei pe adresa dumneavoastra de email.</string>
    <string name="reset_code_already_generated">Codul de resetare a fost deja generat.</string>
    <string name="generate_reset_code_failed">Codul de resetare nu a putut fi generat.</string>
    <string name="invalid_username_or_password">Nume de utilizator sau parolă incorecte.</string>
    <string name="complete_username_or_email">Vă rugăm completați câmpul cu numele de utilizator sau email-ul.</string>
    <string name="invalid_username_or_email">Nume de utilizator sau email incorecte.</string>
    <string name="inexistent_username_or_email">Nume de utilizator sau email inexistente.</string>
    <string name="server_error">A apărut o eroare pe server. Vă rugam reîncercați.</string>
    <string name="duplicate_username_or_email">Există deja un cont cu același nume de utilizator sau email.</string>
    <string name="complete_all_fields">Vă rugăm completați toate câmpurile.</string>
    <string name="no_internet_connection">Nu există conexiune la internet.</string>
    <string name="weak_internet_connection">Conexiune slabă la internet.</string>
    <string name="check_internet_connection">Verificați conexiunea la internet.</string>
    <string name="cannot_connect_to_server">Nu s-a putut realiza conexiune cu server-ul. Vă rugăm reîncercați.</string>
    <string name="unexpected_error_encountered">A apărut o eroare. Vă rugăm reîncercați.</string>
    <string name="success">Succes</string>
    <string name="SearchRestaurant">Caută\nrestaurant</string>
    <string name="BookTable">Rezervă\nmasă</string>
    <string name="OrderHome">Comandă\nacasă</string>
    <string name="News">Noutăți\n</string>
    <string name="searchBarDescriptionTitle">Caută</string>
    <string name="searchBarDescription">Denumire</string>
    <string name="searchBarCountyTitle">Județ</string>
    <string name="searchBarCounty">Alege județ</string>
    <string name="searchBarCityTitle">Oraș</string>
    <string name="searchBarCity">Alege oraș</string>
    <string name="searchBarRangeTitle">Distanță</string>
    <string name="searchBarRange">Alege distanță</string>
    <string name="searchBarCategoryTitle">Categorie</string>
    <string name="searchBarCategory">Alege categorie</string>
    <string name="searchBarIncompleteFields">Câmp necompletat</string>
    <string name="searchBarPleaseSelectCounty">Pentru a putea selecta orașul, mai întâi trebuie selectat județul.</string>
    <string name="searchBarGetResult">Vezi rezultate</string>
    <string name="cancelSelection">Anulează</string>
    <string name="confirmSelection">Confirmă</string>
    <string name="chooseRestaurantType">Alege tipul</string>
    <string name="searchBarUseMyLocation">Locația mea actuală</string>
    <string name="searchBarChooseDistanceTitle">Distanță</string>
    <string name="searchBarChooseDistance">Alege distanță</string>
    <string name="searchBarLocationPermissionNotGrantedTitle">Accesare locație curentă</string>
    <string name="searchBarLocationPermissionNotGranted">Ne pare rău, dar căutarea bazată pe locația curentă nu se poate realiza deoarece nu ați acordat acces la aceasta.</string>
    <string name="searchBarLocationServiceDisabled">Pentru a putea accesa locația curentă, vă rugăm porniți serviciul.</string>
    <string name="searchBarLocationNotRetrieved">Din păcate, locația dumneavoastră nu a putut fi preluată.</string>
    <string-array name="restaurantTypes">

        <item>Fast-food</item>
        <item>Pizzerie</item>
        <item>Tradițional</item>
        <item>Shaormerie</item>
        <item>Bar</item>
        <item>Pub</item>

    </string-array>
    <string-array name="Counties">
        <item>Alba</item>
        <item>Arad</item>
        <item>Argeș</item>
        <item>Bacău</item>
        <item>Bihor</item>
        <item>Bistrița-Năsăud</item>
        <item>Botoșani</item>
        <item>Brăila</item>
        <item>Brașov</item>
        <item>Buzău</item>
        <item>Călărași</item>
        <item>Caraș-Severin</item>
        <item>Cluj</item>
        <item>Constanța</item>
        <item>Covasna</item>
        <item>Dâmbovița</item>
        <item>Dolj</item>
        <item>Galați</item>
        <item>Giurgiu</item>
        <item>Gorj</item>
        <item>Harghita</item>
        <item>Hunedoara</item>
        <item>Ialomița</item>
        <item>Iași</item>
        <item>Ilfov</item>
        <item>Maramureș</item>
        <item>Mehedinți</item>
        <item>Mureș</item>
        <item>Neamț</item>
        <item>Olt</item>
        <item>Prahova</item>
        <item>Sălaj</item>
        <item>Satu Mare</item>
        <item>Sibiu</item>
        <item>Suceava</item>
        <item>Teleorman</item>
        <item>Timiș</item>
        <item>Tulcea</item>
        <item>Vâlcea</item>
        <item>Vaslui</item>
        <item>Vrancea</item>
    </string-array>
    <string-array name="Alba">
        <item>Abrud</item>
        <item>Aiud</item>
        <item>Albac</item>
        <item>Alba Iulia</item>
        <item>Almașu Mare</item>
        <item>Arieșeni</item>
        <item>Avram Iancu</item>
        <item>Baia de Arieș</item>
        <item>Berghin</item>
        <item>Bistra</item>
        <item>Blaj</item>
        <item>Blandiana</item>
        <item>Bucerdea Grânoasă</item>
        <item>Bucium</item>
        <item>Câlnic</item>
        <item>Câmpeni</item>
        <item>Cenade</item>
        <item>Cergău</item>
        <item>Ceru-Băcăinți</item>
        <item>Cetatea de Baltă</item>
        <item>Ciugud</item>
        <item>Ciuruleasa</item>
        <item>Crăciunelu de Jos</item>
        <item>Cricău</item>
        <item>Cugir</item>
        <item>Cut</item>
        <item>Daia Română</item>
        <item>Doștat</item>
        <item>Fărău</item>
        <item>Galda de Jos</item>
        <item>Gârbova</item>
        <item>Gârda de Sus</item>
        <item>Hopârta</item>
        <item>Horea</item>
        <item>Ighiu</item>
        <item>Întregalde</item>
        <item>Jidvei</item>
        <item>Livezile</item>
        <item>Lopadea Nouă</item>
        <item>Lunca Mureșului</item>
        <item>Lupșa</item>
        <item>Meteș</item>
        <item>Mihalț</item>
        <item>Mirăslău</item>
        <item>Mogoș</item>
        <item>Noșlac</item>
        <item>Ocna Mureș</item>
        <item>Ocoliș</item>
        <item>Ohaba</item>
        <item>Pianu</item>
        <item>Poiana Vadului</item>
        <item>Ponor</item>
        <item>Poșaga</item>
        <item>Rădești</item>
        <item>Râmeț</item>
        <item>Rimetea</item>
        <item>Roșia de Secaș</item>
        <item>Roșia Montană</item>
        <item>Sălciua</item>
        <item>Săliștea</item>
        <item>Sâncel</item>
        <item>Sântimbru</item>
        <item>Săsciori</item>
        <item>Scărișoara</item>
        <item>Sebeș</item>
        <item>Șibot</item>
        <item>Sohodol</item>
        <item>Șona</item>
        <item>Șpring</item>
        <item>Stremț</item>
        <item>Șugag</item>
        <item>Teiuș</item>
        <item>Unirea</item>
        <item>Vadu Moților</item>
        <item>Valea Lungă</item>
        <item>Vidra</item>
        <item>Vințu de Jos</item>
        <item>Zlatna</item>
    </string-array>
    <string-array name="Arad">
        <item>Almaș</item>
        <item>Apateu</item>
        <item>Arad</item>
        <item>Archiș</item>
        <item>Bârsa</item>
        <item>Bârzava</item>
        <item>Bata</item>
        <item>Beliu</item>
        <item>Birchiș</item>
        <item>Bocsig</item>
        <item>Brazii</item>
        <item>Buteni</item>
        <item>Cărand</item>
        <item>Cermei</item>
        <item>Chisindia</item>
        <item>Chișineu-Criș</item>
        <item>Conop</item>
        <item>Covăsânț</item>
        <item>Craiva</item>
        <item>Curtici</item>
        <item>Dezna</item>
        <item>Dieci</item>
        <item>Dorobanți</item>
        <item>Fântânele</item>
        <item>Felnac</item>
        <item>Frumușeni</item>
        <item>Ghioroc</item>
        <item>Grăniceri</item>
        <item>Gurahonț</item>
        <item>Hălmăgel</item>
        <item>Hălmagiu</item>
        <item>Hășmaș</item>
        <item>Ignești</item>
        <item>Ineu</item>
        <item>Iratoșu</item>
        <item>Lipova</item>
        <item>Livada</item>
        <item>Macea</item>
        <item>Mișca</item>
        <item>Moneasa</item>
        <item>Nădlac</item>
        <item>Olari</item>
        <item>Pâncota</item>
        <item>Păuliș</item>
        <item>Pecica</item>
        <item>Peregu Mare</item>
        <item>Petriș</item>
        <item>Pilu</item>
        <item>Pleșcuța</item>
        <item>Șagu</item>
        <item>Sântana</item>
        <item>Săvârșin</item>
        <item>Sebiș</item>
        <item>Secusigiu</item>
        <item>Șeitin</item>
        <item>Seleuș</item>
        <item>Semlac</item>
        <item>Șepreuș</item>
        <item>Șicula</item>
        <item>Șilindia</item>
        <item>Șimand</item>
        <item>Sintea Mare</item>
        <item>Șiria</item>
        <item>Șiștarovăț</item>
        <item>Socodor</item>
        <item>Șofronea</item>
        <item>Târnova</item>
        <item>Tauț</item>
        <item>Ususău (Dorgoş)</item>
        <item>Vărădia de Mureș</item>
        <item>Vârfurile</item>
        <item>Vinga</item>
        <item>Vladimirescu</item>
        <item>Zăbrani</item>
        <item>Zădăreni</item>
        <item>Zărand</item>
        <item>Zerind</item>
        <item>Zimandu Nou</item>
    </string-array>
</resources>