<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="ebar.dansebi.com.ebar.Modules.SearchBar.Fragment.SearchBar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/fbCvGetResult"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/searchBarDescriptionTitle"
                android:textColor="@color/darkGrey"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <EditText
                    android:id="@+id/fsbEtRestaurantDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/searchBarDescription"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/darkGrey"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/fsbIvRemoveDescription"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="9"
                    android:clickable="true"
                    android:paddingLeft="10dp"
                    android:src="@drawable/ic_remove"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/searchBarCategoryTitle"
                android:textColor="@color/darkGrey"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:id="@+id/fsbTvRestaurantCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/custom_spinner_background_not_selected"
                    android:gravity="center_vertical"
                    android:hint="@string/searchBarCategory"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/fsbIvRemoveCategory"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="9"
                    android:clickable="true"
                    android:paddingLeft="10dp"
                    android:src="@drawable/ic_remove"
                    android:visibility="gone" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/fsbCbUseMyLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/searchBarUseMyLocation"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <LinearLayout
                android:id="@+id/fsbLlSearchLocationByCountyAndCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/searchBarCountyTitle"
                    android:textColor="@color/darkGrey"
                    android:textSize="13sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:id="@+id/fsbCounty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/custom_spinner_background_not_selected"
                        android:gravity="center_vertical"
                        android:hint="@string/searchBarCounty"
                        android:paddingEnd="5dp"
                        android:paddingStart="5dp"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/fsbIvRemoveCounty"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="9"
                        android:clickable="true"
                        android:paddingLeft="10dp"
                        android:src="@drawable/ic_remove"
                        android:visibility="gone" />
                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/searchBarCityTitle"
                    android:textColor="@color/darkGrey"
                    android:textSize="13sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"

                    android:weightSum="10">

                    <TextView
                        android:id="@+id/fsbCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/custom_spinner_background_not_selected"
                        android:gravity="center_vertical"
                        android:hint="@string/searchBarCity"
                        android:paddingEnd="5dp"
                        android:paddingStart="5dp"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/fsbIvRemoveCity"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="9"
                        android:clickable="true"
                        android:paddingLeft="10dp"
                        android:src="@drawable/ic_remove"
                        android:visibility="gone" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/fsbLlSearchLocationByGPS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/searchBarChooseDistanceTitle"
                    android:textColor="@color/darkGrey"
                    android:textSize="13sp" />


                <Spinner
                    android:id="@+id/fsbDistance"
                    android:spinnerMode="dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_spinner_background_selected" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


    <android.support.v7.widget.CardView
        android:id="@+id/fsbCvGetResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/turqoise"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/searchBarGetResult"
                android:textColor="#fff"
                android:textSize="18sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/login_coordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</RelativeLayout>
